--- a/app/Resources/translations/validators.en.yml
+++ b/app/Resources/translations/validators.en.yml
@@ -1,1 +1,1 @@
-"This value should not be blank.": "Hi! Please enter *something* for the genus"
+"This value should not be blank.": Hi! Please enter *something* for this field :)
